Fixed header gap

--- a/sites/all/themes/bluemasters 7/css/style.css
+++ b/sites/all/themes/bluemasters 7/css/style.css
@@ -1851,7 +1851,7 @@ top header*/
 #header
 {
 	background: rgba(0, 0, 0, 0.7);
-	position: fixed;
+	top: inherit;
 	z-index: 1000000;
 }
 #wrapper-banner
